--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.0.5",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
