--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^10.5.2",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
+    "maildev": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
