--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
     "@mui/styled-engine": "^5.14.15",
+    "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.4.0",
     "firebase": "^10.5.2",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "maildev": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
